# MLPlugins

./: .buildconfig  .cproject  .geanyprj  .gitignore  .project  CMakeLists.txt  CMakeSettings.json  Doxyfile.in  README.md  brain_trainer_run.sh  build.ps1  build.sh
MLP/lib/: CMakeLists.txt
MLP/lib/include/: mlp_api.h  mlp_config.h.in  mlp_network.h  mlp_neuron.h  mlp_trainer.h  mlp_types.h
MLP/lib/src/: mlp_api.c  mlp_layer.c  mlp_network.c  mlp_network_api.c  mlp_neuron.c  mlp_plugin_api.c  mlp_trainer.c  mlp_trainer_api.c
MLP/plugin/: CMakeLists.txt  MLP.py  __init__.py  mlploader.py
MLP/plugin/exchange/: __init__.py  mlpdata.py  mlpmetada.py  mlpnetwork.py  mlptrainer.py
MLP/plugin/impl/: __init__.py  mlpnetworkdrawerui.py  mlptrainereditorui.py  mlptrainerloaderui.py
MLP/plugin/ui/: __init__.py  mlpnetworkdrawerui.py  mlptrainereditorui.py  mlptrainerloaderui.py
MLP/wrapper/py/: CMakeLists.txt  mlp.py.in
builder/: CMakeLists.txt
builder/include/: brain_builder.h  brain_builder_config.h.in  brain_builder_types.h  brain_plugin.h  brain_plugin_config.h.in  brain_plugin_manager.h  brain_plugin_types.h
builder/schemas/: plugin_api.xsd
builder/src/: brain_builder.c  brain_plugin.c  brain_plugin_manager.c  builder.c
core/: CMakeLists.txt  brain.c  brain.h  brain.pc.in  brain_activation.c  brain_activation.h  brain_config.h.in  brain_data_reader.c  brain_data_reader.h  brain_descriptor.c  brain_descriptor.h  brain_layer_builder.c  brain_layer_builder.h  brain_logging_utils.c  brain_logging_utils.h  brain_mapper.c  brain_mapper.h  brain_network_builder.c  brain_network_builder.h  brain_neuron_builder.c  brain_neuron_builder.h  brain_synapse_builder.c  brain_synapse_builder.h  brain_type.h  brain_xml_utils.c  brain_xml_utils.h  tags
core/include/: brain_core_config.h.in  brain_core_types.h  brain_csv_utils.h  brain_data_utils.h  brain_enum_utils.h  brain_function_utils.h  brain_logging_utils.h  brain_math_utils.h  brain_memory_utils.h  brain_probe.h  brain_random.h  brain_random_utils.h  brain_signal_utils.h  brain_weight_utils.h  brain_xml_utils.h
core/schemas/: data.xsd  network.xsd
core/src/: brain_csv_utils.c  brain_data_utils.c  brain_enum_utils.c  brain_function_utils.c  brain_logging_utils.c  brain_math_utils.c  brain_random.c  brain_random_utils.c  brain_signal_utils.c  brain_weight_utils.c  brain_xml_utils.c
ctrl/: CMakeLists.txt
ctrl/include/: brain_plugin.h  brain_plugin_manager.h  brain_plugin_types.h
ctrl/src/: brain_plugin.c  brain_plugin_manager.c
dev/: CMakeLists.txt
dev/include/: brain_activation.h  brain_builder.h  brain_builder_types.h  brain_config.h.in  brain_cost.h  brain_data.h  brain_layer.h  brain_logging_utils.h  brain_network.h  brain_neuron.h  brain_random.h  brain_types.h  brain_weight.h  brain_xml_utils.h
dev/src/: .brain_network.c.swp  brain_activation.c  brain_builder.c  brain_builder.h  brain_builder_types.h  brain_config.h.in  brain_cost.c  brain_data.c  brain_data.h  brain_data_reader.c  brain_layer.c  brain_layer.h  brain_layer_builder.c  brain_layer_builder.h  brain_learning.c  brain_logging_utils.c  brain_network.c  brain_network.h  brain_network_builder.c  brain_network_builder.h  brain_neuron.c  brain_neuron.h  brain_neuron_builder.c  brain_neuron_builder.h  brain_random.c  brain_settings.c  brain_settings.h  brain_tree.c  brain_tree.h  brain_types.h  brain_utils_config.h  brain_utils_config.h.in  brain_weight.c  brain_weight.h  brain_xml_utils.c  brain_xml_utils.h
dev/src/builder/: brain_builder.c  brain_data_reader.c  brain_data_reader.h  brain_utils_config.h.in
dev/src/core/: brain_layer.c  brain_network.c  brain_neuron.h  brain_settings.c  brain_settings.h
dev/src/utils/: brain_xml_utils.c  (+1 more)
iface/: CMakeLists.txt
iface/include/: brain_iface_types.h  brain_plugin_iface.h  brain_plugin_types.h  brain_trainable_iface.h
iface/src/: brain_plugin_iface.c  brain_trainable_iface.c
manager/: CMakeLists.txt
manager/include/: brain_manager_config.h.in  brain_plugin.h  brain_plugin_manager.h  brain_plugin_types.h
manager/src/: brain_manager.c  brain_plugin.c  brain_plugin_manager.c
plugins/MLP/: CMakeLists.txt
plugins/mlp/: CMakeLists.txt  README.md  mlp.xml
plugins/test/: CMakeLists.txt
src/brain/: CMakeLists.txt  brain.pc  brain_costfunction.h  brain_data_reader.c  brain_data_reader.h  brain_layer_builder.c  brain_layer_builder.h  brain_learning.c  brain_learning.h  brain_network_builder.c  brain_network_builder.h  brain_neuron_builder.c  brain_neuron_builder.h  brain_settings.c  brain_settings.h  brain_types.h  brain_weight.c  brain_weight.h
src/builder/: CMakeLists.txt  brain_builder.c  brain_builder.h  brain_builder_types.h  brain_utils_config.h  brain_xml_utils.c  brain_xml_utils.h
src/core/: CMakeLists.txt  brain.c  brain.h  brain.pc.in  brain_activation.c  brain_activation.h  brain_costfunction.c  brain_costfunction.h  brain_data_reader.c  brain_data_reader.h  brain_layer_builder.c  brain_layer_builder.h  brain_network_builder.c  brain_network_builder.h  brain_neuron_builder.c  brain_neuron_builder.h  brain_synapse_builder.c  brain_synapse_builder.h  brain_types.h
src/test/: .gitignore  CMakeLists.txt  data.xml  main.c  mapping.xml
src/utils/: CMakeLists.txt  brain_data_reader.c  brain_data_reader.h  brain_logging_utils.c  brain_logging_utils.h  brain_utils_config.h.in  brain_xml_utils.c  brain_xml_utils.h
test/: CMakeLists.txt  data.xml  main.c  mapping.xml
test/src/: config_all.h.in  test1.c  test_create_network.c  test_create_settings.c  test_create_settings.xml  test_load_data.c  test_load_data.csv  test_serialize_network.c  test_serialize_network.xml
trainer/: CMakeLists.txt
trainer/include/: brain_data_manager.h  brain_plugin.h  brain_plugin_types.h  brain_trainer.h  brain_trainer_types.h  trainer_config.h.in
trainer/resources/: org.libbrain.gschema.xml  view.glade  view.glade~
trainer/src/: brain_app.c  brain_data_manager.c  brain_plugin.c  brain_trainer.c
view/: CMakeLists.txt
view/include/: brain_view_config.h.in
view/src/: builder.c
(+492 files in other folders)
